choix theme + header et section appli

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Présentation de notre galaxie, de ses planètes et des ses secrets.">
+    <meta name="description" content="Blog lifestyle">
     <meta name="author" content="Clémence Thierry">
     <!--        (
                  )     (
@@ -29,26 +29,57 @@
     '._     """----.....______.....----"""     _.'
       `""--..,,_____            _____,,..--""`
                      `"""----"""` -->
-    <title>La Voie Lactée : Une Fenêtre sur l'Infini</title>
+    <title>June</title>
     <link rel="icon" href="" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Jost:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Navigation -->
-    <div id="navContainer">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#articlesPreview">Blog</a></li>
-                <li><a href="#latestNews">Features + FAQ</a></li>
-                <li><a href="#sectionGridGallery">Pages</a></li>
-                <li><a href="#amazonBanner">Shop</a></li>
-                <li><a href="#formContact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
+
+    <nav>
+        <img class="logo" src="images/logo-GreenAttitude.png" alt="Logo Green Attitude" />
+        <div class="toggle">
+            <i class="fas fa-bars ouvrir"></i>
+            <i class="fas fa-times fermer"></i>
+        </div>
+        <ul class="menu">
+            <li><a href="#">Accueil</a></li>
+            <li><a href="#">Types de plantes</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><button class="btn">Inscription</button></li>
+            <li><button class="btn btn-secondary">Connexion</button></li>
+        </ul>
+    </nav>
+    <header>
+        <div>
+            <h1>Green Attitude</h1>
+            <h2>Comment bien vous occuper de vos plantes !</h2>
+        </div>
+        <div>
+            <img src="images/plantHeader.png" alt="plante" />
+        </div>
+    </header>
+    <section>
+        <h2>L</h2>
+
+    </section>
+    <section id="application">
+        <div>
+            <h2>Télécharger l'application</h2>
+            <p>Prenez soin de vos plantes sans même avoir à y penser ! Elles vous enverront elles-même un rappel au moment de vous en occuper. Retrouvez aussi tous les détails pour tout connaître sur elles.</p>
+            <div class="download-boutons">
+                <img src="images/app-store-bouton.png" alt="app store bouton" />
+                <img src="images/google-play-bouton.png" alt="google play bouton" />
+            </div>
+        </div>
+        <img src="images/telephoneMockup.png" alt="Mockup Application Green Attitude" />
+    </section>
+    <footer></footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
