Fin du responsive + page plantes

--- a/plantes.html
+++ b/plantes.html
@@ -7,30 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog lifestyle">
     <meta name="author" content="Clémence Thierry">
-    <!--        (
-                 )     (
-              ___...(-------)-....___
-          .-""       )    (          ""-.
-     .-'``'|-._             )         _.-|
-    /  .--.|   `""---...........---""`   |
-   /  /    |                             |
-   |  |    |                             |
-    \  \   |                             |
-     `\ `\ |                             |
-       `\ `|                             |
-       _/ /\                             /
-      (__/  \                           /
-   _..---""` \                         /`""---.._
-.-'           \                       /          '-.
-:               `-.__             __.-'              :
-:                  ) ""---...---"" (                 :
-'._               `"--...___...--"`              _.'
-   \""--..__                              __..--""/
-    '._     """----.....______.....----"""     _.'
-      `""--..,,_____            _____,,..--""`
-                     `"""----"""` -->
     <title>Green Attitude - Types de plantes</title>
-    <link rel="icon" href="" />
+    <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/plantesStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,8 +37,8 @@
         <h2>Mes Plantes</h2>
         <div class="plantsGallery">
             <div class="plantCard">
-                <img class="infoPlante" src="/images/Plantes/icons8-humide-50.png" alt="statue" />
-                <img class="illuPlante" src="/images/Plantes/plante1.png" alt="Alysse" />
+                <img class="pictoPlante statu" src="/images/Plantes/icons8-humide-50.png" alt="icone plante à arroser" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
                 <div>
                     <h4>Strelitzia nicolai</h4>
                     <p>Intérieur</p>
@@ -68,8 +46,8 @@
                 <div class="cardFond"></div>
             </div>
             <div class="plantCard">
-                <img class="infoPlante" src="/images/Plantes/icons8-ok.svg" alt="statue" />
-                <img class="illuPlante" src="/images/Plantes/plante2.png" alt="Alysse" />
+                <img class="pictoPlante statu" src="/images/Plantes/icons8-ok.svg" alt="icone plante ok (sans besoins)" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Cereus jamacaru" />
                 <div>
                     <h4>Cereus jamacaru</h4>
                     <p>Intérieur</p>
@@ -77,11 +55,170 @@
                 <div class="cardFond"></div>
             </div>
             <div class="plantCard">
-                <img class="infoPlante" src="/images/Plantes/icons8-humide-50.png" alt="statue" />
-                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Alysse" />
+                <img class="pictoPlante statu" src="/images/Plantes/icons8-humide-50.png" alt="icone plante à arroser" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Aphelandra squarrosa" />
                 <div>
                     <h4>Aphelandra squarrosa</h4>
                     <p>Extérieur</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+        </div>
+    </section>
+    <section id="fougeres">
+        <h2>Les Fougères</h2>
+        <p>Les fougères sont des plantes d'intérieur très populaires en raison de leur apparence élégante et de leurs feuilles vertes en forme de plumes. Elles ont besoin d'une humidité constante et d'un éclairage indirect pour prospérer.</p>
+        <div class="plantsGallery">
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
+                <div>
+                    <h4>Fougère 1</h4>
+                    <p>Dimensions</p>
+                    <p>90 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
+                <div>
+                    <h4>Fougère 2</h4>
+                    <p>Dimensions</p>
+                    <p>70 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
+                <div>
+                    <h4>Fougère 3</h4>
+                    <p>Dimensions</p>
+                    <p>110 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
+                <div>
+                    <h4>Fougère 4</h4>
+                    <p>Dimensions</p>
+                    <p>90 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+        </div>
+    </section>
+    <section id="succulentes">
+        <h2>Les Succulentes</h2>
+        <p>Les succulentes sont des plantes d'intérieur idéales pour les débutants car elles sont faciles à entretenir et à arroser. Elles ont des feuilles épaisses et charnues qui leur permettent de stocker de l'eau, ce qui leur permet de survivre dans
+            des conditions arides.</p>
+        <div class="plantsGallery">
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Cereus jamacaru" />
+                <div>
+                    <h4>Succulente 1</h4>
+                    <p>Dimensions</p>
+                    <p>80 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Aphelandra squarrosa" />
+                <div>
+                    <h4>Succulente 2</h4>
+                    <p>Dimensions</p>
+                    <p>90 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Cereus jamacaru" />
+                <div>
+                    <h4>Succulente 3</h4>
+                    <p>Dimensions</p>
+                    <p>90 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Aphelandra squarrosa" />
+                <div>
+                    <h4>Succulente 4</h4>
+                    <p>Dimensions</p>
+                    <p>65 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+        </div>
+    </section>
+    <section id="palmiers">
+        <h2>Les Palmiers</h2>
+        <p>Les palmiers sont des plantes d'intérieur populaires pour leur apparence exotique et leur feuillage luxuriant. Ils nécessitent une forte luminosité et une humidité modérée pour prospérer.</p>
+        <div class="plantsGallery">
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
+                <div>
+                    <h4>Palmier 1</h4>
+                    <p>Dimensions</p>
+                    <p>70 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Cereus jamacaru" />
+                <div>
+                    <h4>Palmier 2</h4>
+                    <p>Dimensions</p>
+                    <p>80 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Aphelandra squarrosa" />
+                <div>
+                    <h4>Palmier 3</h4>
+                    <p>Dimensions</p>
+                    <p>75 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Strelitzia nicolai" />
+                <div>
+                    <h4>Palmier 4</h4>
+                    <p>Dimensions</p>
+                    <p>120 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Cereus jamacaru" />
+                <div>
+                    <h4>Palmier 5</h4>
+                    <p>Dimensions</p>
+                    <p>110 cm</p>
+                </div>
+                <div class="cardFond"></div>
+            </div>
+            <div class="plantCard">
+                <img class="pictoPlante ajout" src="/images/Plantes/icons8-plus.svg" alt="icone ajout plante" />
+                <img class="illuPlante" src="/images/Plantes/plante3.png" alt="Aphelandra squarrosa" />
+                <div>
+                    <h4>Palmier 6</h4>
+                    <p>Dimensions</p>
+                    <p>105 cm</p>
                 </div>
                 <div class="cardFond"></div>
             </div>
