--- a/blog.html
+++ b/blog.html
@@ -7,30 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog lifestyle">
     <meta name="author" content="Clémence Thierry">
-    <!--        (
-                 )     (
-              ___...(-------)-....___
-          .-""       )    (          ""-.
-     .-'``'|-._             )         _.-|
-    /  .--.|   `""---...........---""`   |
-   /  /    |                             |
-   |  |    |                             |
-    \  \   |                             |
-     `\ `\ |                             |
-       `\ `|                             |
-       _/ /\                             /
-      (__/  \                           /
-   _..---""` \                         /`""---.._
-.-'           \                       /          '-.
-:               `-.__             __.-'              :
-:                  ) ""---...---"" (                 :
-'._               `"--...___...--"`              _.'
-   \""--..__                              __..--""/
-    '._     """----.....______.....----"""     _.'
-      `""--..,,_____            _____,,..--""`
-                     `"""----"""` -->
     <title>Green Attitude - Blog</title>
-    <link rel="icon" href="" />
+    <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blogStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
