--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       `""--..,,_____            _____,,..--""`
                      `"""----"""` -->
     <title>Green Attitude</title>
-    <link rel="icon" href="" />
+    <link rel="icon" href="favicon.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/indexStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
